--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
             <h1>Discover hidden places in the world around you</h1>
             <p><a href="#">Download Excusion (Coming Soon!)</a></p>
         </header>
+        <section>
+            <video src="./Resources/video/excursion.mp4" autoplay>Video not supported</video>
+        </section>
     </body>
 </html>
