--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
-            <p><a href="#">Download Excusion (Coming Soon!)</a></p>
+            <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+            <video src="./Resources/video/excursion.mp4" autoplay muted loop>Video not supported</video>
         </header>
         <section>
-            <video src="./Resources/video/excursion.mp4" autoplay>Video not supported</video>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="./Resources/images/camp.webp" alt="image of a campsite" />
         </section>
+        <section>
+            <img src="./Resources/images/phone.webp" alt="A phone icon" />
+            <h2>Coming soon for iPhone and Android</h2>
+            <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+        </section>
+        <footer>
+            <p>&COPY;Excursion</p>
+        </footer>
     </body>
 </html>
