--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
-            <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+            <p><a href="#">Download Excursion (Coming soon!)</a></p>
             <video src="./Resources/video/excursion.mp4" autoplay muted loop>Video not supported</video>
         </header>
         <section>
@@ -16,12 +16,14 @@
             <img src="./Resources/images/camp.webp" alt="image of a campsite" />
         </section>
         <section>
-            <img src="./Resources/images/phone.webp" alt="A phone icon" />
-            <h2>Coming soon for iPhone and Android</h2>
-            <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+            <p>
+                <img src="./Resources/images/phone.webp" alt="A phone icon" />
+            </p>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a href="#">Download Excursion (Coming soon!)</a></p>
         </section>
         <footer>
-            <p>&COPY;Excursion</p>
+            <p>&COPY; Excursion</p>
         </footer>
     </body>
 </html>
